--- a/result/2021-12-19.md
+++ b/result/2021-12-19.md
@@ -7,12 +7,12 @@
 7. [米卡0.6秒绝杀夺冠](https://s.weibo.com//weibo?q=%E7%B1%B3%E5%8D%A10.6%E7%A7%92%E7%BB%9D%E6%9D%80%E5%A4%BA%E5%86%A0&Refer=top) 1431508
 8. [长沙疫情](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%B2%99%E7%96%AB%E6%83%85%23&Refer=top) 1256511
 9. [安徽失联孕妇婆婆称家中留有遗书](https://s.weibo.com//weibo?q=%23%E5%AE%89%E5%BE%BD%E5%A4%B1%E8%81%94%E5%AD%95%E5%A6%87%E5%A9%86%E5%A9%86%E7%A7%B0%E5%AE%B6%E4%B8%AD%E7%95%99%E6%9C%89%E9%81%97%E4%B9%A6%23&Refer=top) 1187401
-10. [杭州疫情](https://s.weibo.com//weibo?q=%E6%9D%AD%E5%B7%9E%E7%96%AB%E6%83%85&Refer=top) 1001115
-11. [湖北高速桥面垮塌7人获救](https://s.weibo.com//weibo?q=%23%E6%B9%96%E5%8C%97%E9%AB%98%E9%80%9F%E6%A1%A5%E9%9D%A2%E5%9E%AE%E5%A1%8C7%E4%BA%BA%E8%8E%B7%E6%95%91%23&Refer=top) 938310
-12. [雪滴花](https://s.weibo.com//weibo?q=%E9%9B%AA%E6%BB%B4%E8%8A%B1&Refer=top) 920309
-13. [多地医护紧急驰援西安抗疫](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E5%8C%BB%E6%8A%A4%E7%B4%A7%E6%80%A5%E9%A9%B0%E6%8F%B4%E8%A5%BF%E5%AE%89%E6%8A%97%E7%96%AB%23&Refer=top) 790442
-14. [西安市雁塔区采取区域隔离管控](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%B8%82%E9%9B%81%E5%A1%94%E5%8C%BA%E9%87%87%E5%8F%96%E5%8C%BA%E5%9F%9F%E9%9A%94%E7%A6%BB%E7%AE%A1%E6%8E%A7%23&Refer=top) 774972
-15. [南昌杀妻抛尸案二审维持死刑](https://s.weibo.com//weibo?q=%23%E5%8D%97%E6%98%8C%E6%9D%80%E5%A6%BB%E6%8A%9B%E5%B0%B8%E6%A1%88%E4%BA%8C%E5%AE%A1%E7%BB%B4%E6%8C%81%E6%AD%BB%E5%88%91%23&Refer=top) 750561
+10. [南昌杀妻抛尸案二审维持死刑](https://s.weibo.com//weibo?q=%23%E5%8D%97%E6%98%8C%E6%9D%80%E5%A6%BB%E6%8A%9B%E5%B0%B8%E6%A1%88%E4%BA%8C%E5%AE%A1%E7%BB%B4%E6%8C%81%E6%AD%BB%E5%88%91%23&Refer=top) 1004186
+11. [杭州疫情](https://s.weibo.com//weibo?q=%E6%9D%AD%E5%B7%9E%E7%96%AB%E6%83%85&Refer=top) 1001115
+12. [湖北高速桥面垮塌7人获救](https://s.weibo.com//weibo?q=%23%E6%B9%96%E5%8C%97%E9%AB%98%E9%80%9F%E6%A1%A5%E9%9D%A2%E5%9E%AE%E5%A1%8C7%E4%BA%BA%E8%8E%B7%E6%95%91%23&Refer=top) 938310
+13. [雪滴花](https://s.weibo.com//weibo?q=%E9%9B%AA%E6%BB%B4%E8%8A%B1&Refer=top) 920309
+14. [多地医护紧急驰援西安抗疫](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E5%8C%BB%E6%8A%A4%E7%B4%A7%E6%80%A5%E9%A9%B0%E6%8F%B4%E8%A5%BF%E5%AE%89%E6%8A%97%E7%96%AB%23&Refer=top) 790442
+15. [西安市雁塔区采取区域隔离管控](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%B8%82%E9%9B%81%E5%A1%94%E5%8C%BA%E9%87%87%E5%8F%96%E5%8C%BA%E5%9F%9F%E9%9A%94%E7%A6%BB%E7%AE%A1%E6%8E%A7%23&Refer=top) 774972
 16. [北京全职爸爸的真实一天](https://s.weibo.com//weibo?q=%E5%8C%97%E4%BA%AC%E5%85%A8%E8%81%8C%E7%88%B8%E7%88%B8%E7%9A%84%E7%9C%9F%E5%AE%9E%E4%B8%80%E5%A4%A9&Refer=top) 684401
 17. [狗子的颜值可以有多高](https://s.weibo.com//weibo?q=%23%E7%8B%97%E5%AD%90%E7%9A%84%E9%A2%9C%E5%80%BC%E5%8F%AF%E4%BB%A5%E6%9C%89%E5%A4%9A%E9%AB%98%23&Refer=top) 582853
 18. [宋亚轩回应恶评](https://s.weibo.com//weibo?q=%23%E5%AE%8B%E4%BA%9A%E8%BD%A9%E5%9B%9E%E5%BA%94%E6%81%B6%E8%AF%84%23&Refer=top) 569098
@@ -52,3 +52,4 @@
 52. [民警为67位隔离小朋友讲睡前故事](https://s.weibo.com//weibo?q=%23%E6%B0%91%E8%AD%A6%E4%B8%BA67%E4%BD%8D%E9%9A%94%E7%A6%BB%E5%B0%8F%E6%9C%8B%E5%8F%8B%E8%AE%B2%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B%23&Refer=top) 140981
 53. [六级翻译延安](https://s.weibo.com//weibo?q=%E5%85%AD%E7%BA%A7%E7%BF%BB%E8%AF%91%E5%BB%B6%E5%AE%89&Refer=top) 126772
 54. [重庆狼队对阵广州TTG](https://s.weibo.com//weibo?q=%E9%87%8D%E5%BA%86%E7%8B%BC%E9%98%9F%E5%AF%B9%E9%98%B5%E5%B9%BF%E5%B7%9ETTG&Refer=top) 117037
+55. [打工男子晕倒街头拒上120](https://s.weibo.com//weibo?q=%23%E6%89%93%E5%B7%A5%E7%94%B7%E5%AD%90%E6%99%95%E5%80%92%E8%A1%97%E5%A4%B4%E6%8B%92%E4%B8%8A120%23&Refer=top) 94850
